traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:34: error: not found: value a
  } while (!posFinal(a,b))
                     ^Snake:34: error: not found: value b
  } while (!posFinal(a,b))
                       ^